src/test/deca/syntax/invalid/created/miscellaneous/infinite_int.deca
// Description :
//    test d'un int infinite
//
// Resultats :
//		Erreur lexicographique
//    	Ligne 8:  ?

{
int a = 1e+99;
}